--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "repro-cli": {
+    "issue-project": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/repro-cli",
+            "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -38,7 +38,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "repro-cli:build"
+            "browserTarget": "issue-project:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "repro-cli:build:production"
+              "browserTarget": "issue-project:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "repro-cli:build"
+            "browserTarget": "issue-project:build"
           }
         },
         "test": {
@@ -110,15 +110,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "repro-cli:serve"
+            "devServerTarget": "issue-project:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "repro-cli:serve:production"
+              "devServerTarget": "issue-project:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "repro-cli"
+    }
+  },
+  "defaultProject": "issue-project"
 }
