--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repro-cli",
+  "name": "issue-project",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,32 +7,34 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:build": "angular-http-server -p 4200 --path dist"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.12",
-    "@angular/common": "~9.0.0-rc.12",
-    "@angular/compiler": "~9.0.0-rc.12",
-    "@angular/core": "~9.0.0-rc.12",
-    "@angular/forms": "~9.0.0-rc.12",
-    "@angular/platform-browser": "~9.0.0-rc.12",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.12",
-    "@angular/router": "~9.0.0-rc.12",
+    "@angular/animations": "~9.0.1",
+    "@angular/common": "~9.0.1",
+    "@angular/compiler": "~9.0.1",
+    "@angular/core": "~9.0.1",
+    "@angular/forms": "~9.0.1",
+    "@angular/platform-browser": "~9.0.1",
+    "@angular/platform-browser-dynamic": "~9.0.1",
+    "@angular/router": "~9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.12",
-    "@angular/cli": "~9.0.0-rc.12",
-    "@angular/compiler-cli": "~9.0.0-rc.12",
-    "@angular/language-service": "~9.0.0-rc.12",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
+    "@angular/language-service": "~9.0.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
+    "angular-http-server": "1.9.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
     "karma-chrome-launcher": "~3.1.0",
